--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -17,6 +17,13 @@ pipeline {
                 }
             }
         }
+         stage('Unit Test'){
+            steps{
+                script{
+                    sh 'npm test'
+                }
+            }
+        }
 
         stage('Push Docker Images') {
             steps {
