--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "@mui/icons-material": "^5.16.0",
     "@mui/material": "^5.16.0",
     "@testing-library/user-event": "^13.5.0",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/dom": "^8.0.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
